kubernetes.yml
kind: Namespace
apiVersion: v1
metadata:
  name: olvid-keycloak
  labels:
    name: olvid-keycloak
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: olvid-keycloak-https
  namespace: olvid-keycloak
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
spec:
  ingressClassName: traefik
  tls:
    - hosts:
        - sso-olvid.ecole-hexagone.com
      secretName: olvid-keycloak-cert
  rules:
    - host: sso-olvid.ecole-hexagone.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: olvid-keycloak
                port:
                  number: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: olvid-keycloak
  namespace: olvid-keycloak
  labels:
    app: olvid-keycloak
spec:
  type: ClusterIP
  ports:
  - protocol: TCP
    port: 8080
    targetPort: 8080
  selector:
    app: olvid-keycloak
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: olvid-keycloak
  namespace: olvid-keycloak
  labels:
    app: olvid-keycloak
spec:
  selector:
    matchLabels:
      app: olvid-keycloak
  template:
    metadata:
      labels:
        app: olvid-keycloak
    spec:
      containers:
      - name: olvid-keycloak
        image: ecolehexagone/olvid-keycloak:17.0.1-legacy
        imagePullPolicy: Always
        ports:
        - containerPort: 8080
